--- a/public/css/style.css
+++ b/public/css/style.css
@@ -79,6 +79,7 @@ a.nav-link{
     background: linear-gradient(to top,var(--primary-green-transparent),var(--primary-green-transparent)),url('../img/background/footer.jpg');
     background-size: cover;
     padding:20px 0;
+    margin-top: 180px;
 }
 .footer-box{
     padding:10px 25px;
@@ -367,7 +368,9 @@ a.nav-link{
 }
 .card-body{
     text-align: center;
-    background: var(--primary-green);
+    
+    /*background-color:#e9f9e9;*/
+    background-color: transparent;
 }
 .package-addon{
     color: var(--primary-dark);
@@ -455,5 +458,40 @@ a.nav-link{
 .service-card-text{
     color:var(--primary-green);
     font-weight: 700;
+    color:grey;
 
+}
+
+.card-date {
+    padding-top: 50px;
+    /*float: left;*/
+    
+
+}
+
+.booking__container{
+    background-image: url('../img/background/laundry.jpg');
+    width: 100%;
+    height: 500px;
+    background-size: 100%;
+    
+}
+.booking__container .overlay{
+    background-color: rgba(0,0,0,.8);
+    width:100%;
+    height: 100%;
+    padding:50px 20px;
+}
+
+.left__side{
+    height: 90%;
+    max-width: 48%;
+    background: #ddddddaa;
+}
+.left__side .card, .right__side .card{background: transparent;}
+.right__side{
+    width:48%;
+    margin-left: 20px;
+    height: 90%;
+    background: #ddddddaa;
 }
