--- a/public/css/style.css
+++ b/public/css/style.css
@@ -195,6 +195,25 @@ a.nav-link{
     text-transform: capitalize;
     margin:10px 0px;
 }
+/*-------------------------------------------
+Profile page style start there
+----------------------------------------------*/
+.customer_profile_image{
+    position: relative;
+    width: 80%;
+}
+.customer_profile_image .badge{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    padding: 10px;
+    border-radius: 50px;
+    box-shadow: 0px 0px 10px #000000aa;
+}
+.customer_profile_image img{
+    width: 100%;
+}
+
 /* media section */
 
 .media-section{
@@ -486,12 +505,43 @@ a.nav-link{
 .left__side{
     height: 90%;
     max-width: 48%;
-    background: #ddddddaa;
+    background: orange;
+    padding: 50px 10px;
 }
 .left__side .card, .right__side .card{background: transparent;}
 .right__side{
     width:48%;
     margin-left: 20px;
     height: 90%;
-    background: #ddddddaa;
+    background: #fff;
+    padding: 50px 10px;
+}
+
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  background-color: #4CAF50;
+  color: white;
 }
